Fixed anchor links which previously covered the content before them.

--- a/content/.vuepress/theme/styles/base.scss
+++ b/content/.vuepress/theme/styles/base.scss
@@ -66,3 +66,15 @@ hr {
   margin: 3rem 0;
   background: $borderColor;
 }
+
+:target {
+  position: relative;
+  z-index: -1;
+
+  &:before {
+    content: "";
+    display: block;
+    height: 100px;
+    margin-top: -100px;
+  }
+}
