--- a/content/.vuepress/theme/styles/content.scss
+++ b/content/.vuepress/theme/styles/content.scss
@@ -9,8 +9,6 @@
     position: relative;
     left: -0.8em;
     padding-left: 0.8em;
-    margin-top: -6rem;
-    padding-top: 6rem;
     text-align: left;
 
     .header-anchor {
